--- a/estilo_inicial.css
+++ b/estilo_inicial.css
@@ -440,7 +440,7 @@ a
 }.linha3
 {
     height: 320px;
-    width: 30%;
+    width: 40%;
     display: flex;
     flex-direction:row;
     /*background-color: yellow;/*/
@@ -452,7 +452,7 @@ a
 .infotorta
 {
     height: 300px;
-    width: 350px;
+    width: 400px;
     display: flex;
     flex-direction:column;
     /*background-color: red;*/
@@ -460,7 +460,8 @@ a
     justify-items: center;
     align-content: center;
     align-items: center; 
-    margin-left: 30px;
+    margin-left: -70px;
+    top:50px;
 }
 .precotorta
 {
@@ -485,5 +486,14 @@ a
 .DES2:hover
 {
     background-color: black;
+
+}
+.logoescrita
+{
+    font-family: 'Pinyon Script', cursive;font-size: 98px;
+    width:1500px;
+    height: 500px;
+    top: 100px
+    
 
 }
