--- a/estilo_inicial.css
+++ b/estilo_inicial.css
@@ -300,7 +300,7 @@ body
     display: flex;
     flex-direction:row;
     /*background-color: black;*/
-    margin-left: 800px;
+    margin-left: 900px;
 }
 .DES0
 {
@@ -316,6 +316,7 @@ body
     flex-direction: column;
     margin-left: 0px;
     color: black;
+    
 
 }
 
@@ -332,6 +333,7 @@ body
     align-items: center; 
     flex-direction: column;
     margin-left: 0px;
+    cursor: pointer;
 
 }
 .DES2
@@ -346,12 +348,23 @@ body
     align-content: center;
     align-items: center; 
     margin-left: 20px;
+    cursor: pointer;
 
 }
 a
 {
     text-decoration: none;
     color:white;
+}
+.DES1:hover
+{
+    background-color: black;
+
+}
+.DES2:hover
+{
+    background-color: black;
+
 }
 .propaganda
 {
@@ -478,16 +491,7 @@ a
      margin-left: 0px;
      color:white
 }
-.DES1:hover
-{
-    background-color: black;
 
-}
-.DES2:hover
-{
-    background-color: black;
-
-}
 .logoescrita
 {
     font-family: 'Pinyon Script', cursive;font-size: 98px;
