--- a/estilo_inicial.css
+++ b/estilo_inicial.css
@@ -296,29 +296,16 @@ body
 .DES
 {
     height: 100px;
-    width: 500px;
+    width: 700px;
     display: flex;
     flex-direction:row;
-    /*background-color: black;*/
-    margin-left: 900px;
+    background-color: black;
+    margin-left: 430px;
+    cursor:pointer
 }
-.DES0
-{
-    width: 180px;
-   height: 60px;
-   /*background-color: rgb(38, 101, 103);*/
-   display: flex;
-   border-radius: 20px;
-   justify-content: space-around;
-    justify-items: center;
-    align-content: center;
-    align-items: center; 
-    flex-direction: column;
-    margin-left: 0px;
-    color: black;
-    
 
-}
+   
+
 
 .DES1
 {
@@ -334,6 +321,7 @@ body
     flex-direction: column;
     margin-left: 0px;
     cursor: pointer;
+    margin-top: 20px;
 
 }
 .DES2
@@ -347,8 +335,9 @@ body
     justify-items: center;
     align-content: center;
     align-items: center; 
-    margin-left: 20px;
+    margin-left: 370px;
     cursor: pointer;
+    margin-top: 20px;
 
 }
 a
