--- a/estilo_inicial.css
+++ b/estilo_inicial.css
@@ -314,8 +314,8 @@ a
 }
 .linha1
 {
-    height: 300px;
-    width: 20%;
+    height: 350px;
+    width: 25%;
     display: flex;
     flex-direction:column;
     /*background-color: red;*/
@@ -324,6 +324,7 @@ a
     justify-items: center;
     align-content: center;
     align-items: center; 
+    font-size: 25px;
 }
 .fora
 {
@@ -347,23 +348,37 @@ a
     
 
 }
+.img_legenda
+{
+    position: relative;
+    /*background-color: aqua;*/
+    width: 400px;
+    height: 420px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+}
 .linha2
 {
     height: 500px;
-    width: 50%;
+    width: 70%;
     display: flex;
     flex-direction:row;
-    background-color: yellow;
+    /*background-color: yellow;*/
     margin-left: 40px;
     justify-items: center;
     align-content: center;
     align-items: center; 
     margin-top:-100px ;
+    justify-content: space-around;
 }
 
 .precocoxinha
 {
-    width: 335px;
+    width: 355px;
     height: 70px;
     background-color: rgba(0, 0, 0, 0.562);
     display: flex;
@@ -374,34 +389,43 @@ a
      align-items: center; 
      flex-direction: column;
      margin-left: -375px;
-     color:white
-}.linha3
+     color:white;
+     position: absolute;
+     z-index: 10;
+     top:30px;
+     left:390px;
+
+}
+/*}.linha3
 {
-    height: 320px;
-    width: 40%;
+    height: 500px;
+    width: 30%;
     display: flex;
     flex-direction:row;
-    background-color:RED;
-    margin-left: 70px;
+    background-color: red;
+    margin-left: -210px;
     justify-items: center;
     align-content: center;
     align-items: center; 
-}
+    margin-top: -80px ;
+}*/
 
 .precotorta
 {
-    width: 268px;
-    height: 60px;
+    width: 348px;
+    height: 70px;
     background-color: rgba(0, 0, 0, 0.562);
     display: flex;
-    margin-top: 210px;
-    justify-content: space-around;
+   justify-content: space-around;
      justify-items: center;
      align-content: center;
      align-items: center; 
      flex-direction: column;
-     margin-left: -268px;
-     color:white
+     color:white;
+     position: absolute;
+     z-index: 10;
+     top:340px;
+     left:26px;
 }
 
 .logoescrita
