--- a/estilo_localização.css
+++ b/estilo_localização.css
@@ -30,8 +30,8 @@ body
     border-radius: 75px;
     position: absolute;
     top: 90px;
-    left:-300px; 
-    width: 1000px;
+    left:0px; 
+    width:px;
 }
 .D1
 {
