--- a/estilo_salgados.css
+++ b/estilo_salgados.css
@@ -6,8 +6,8 @@ body
     overflow: hidden;
     margin: 0;
     padding: 0%;
-    width: 99%;
-    height: 99vh;
+    width: 100%;
+    height: 100vh;
 
    
     
@@ -17,36 +17,26 @@ body
 .principal
 {
 
-    border-style: solid;
+   
     border-color: brown;
     border-width: 5px;
     width: 100%;
     height: 99vh;
     display: flex;
     flex-direction: column;
+    position: relative;
+    top:0px;
+    left:0px;
 }
 .logo
 {
-    width: 250px;
- z-index: 11;
- position:absolute;
- top:80px;
- left:50px;
+    width: 80px;
+    z-index: 11;
+    position:absolute;
+    top:0px;
+    left:30px;
 }
-.D1
-{
-    width: 100%;
-    height: 32vh;
-    background-color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    justify-items: center;
-     border-radius: 9px;
-     top:10px;
-}
+
 .D2
 {
     
@@ -60,26 +50,28 @@ body
 {
     /*background-color: brown;*/
     position: absolute;
-    width: 5%;
-    height: 9vh;
-    left: 170px;
-    top:9px;
+    width: 60px;
+    height: 60px;
+    left: 190px;
+    top:10px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
+    justify-items: center;
     align-items: center;
     align-content: center;
     cursor: pointer;
     border-radius: 40px;
+    z-index:10;
 
 }
 .D4
 {
     /*background-color: yellow;*/
     position: absolute;
-    width: 5%;
-    height: 9vh;
-    left: 300px;
+    width: 60px;
+    height: 60px;
+    left: 590px;
     top:9px;
     display: flex;
     flex-direction: row;
@@ -88,14 +80,16 @@ body
     align-content: center;
     cursor: pointer;
     border-radius: 40px;
+    z-index:10;
+    
 }
 .D5
 {
     /*background-color: pink;*/
     position: absolute;
-    width: 5%;
-    height: 9vh;
-    left: 430px;
+    width: 60px;
+    height: 60px;
+    left: 320px;
     top:9px;
     display: flex;
     flex-direction: row;
@@ -104,14 +98,15 @@ body
     align-content: center;
     cursor: pointer;
     border-radius: 40px;
+    z-index:10;
 }
 .D6
 {
     /*background-color: purple;*/
     position: absolute;
-    width: 5%;
-    height: 9vh;
-    left: 530px;
+    width: 60px;
+    height: 60px;
+    left: 460px;
     top:9px;
     display: flex;
     flex-direction: row;
@@ -120,14 +115,15 @@ body
     align-content: center;
     cursor: pointer;
     border-radius: 40px;
+    z-index:10;
 }
 .D7
 {
      /*background-color: purple;*/
      position: absolute;
-     width: 18%;
-     height: 8vh;
-     left: 900px;
+     width: 150px;
+     height: 60px;
+     left: 1200px;
      top:15px;
      display: flex;
      flex-direction: row;
@@ -137,15 +133,16 @@ body
      cursor: pointer;
      color: white;
      margin-left: 5px;
+     z-index:10;
     
 }
 .D8
 {
    /* background-color: yellow;*/
    position: absolute;
-   width: 5%;
-   height: 9vh;
-   left: 1090px;
+   width: 60px;
+   height: 60px;
+   left: 1350px;
    top:9px;
    display: flex;
    flex-direction: row;
@@ -156,14 +153,15 @@ body
    border-radius: 60px;
    color:white;
    margin-left: 28px;
+   z-index:10;
 }
 .D9
 {
     /*background-color: yellow;*/
     position: absolute;
-    width: 5%;
-    height: 9vh;
-    left: 1250px;
+    width: 60px;
+    height: 60px;
+    left: 1500px;
     top:9px;
     display: flex;
     flex-direction: row;
@@ -173,36 +171,12 @@ body
     justify-items: center;
     cursor: pointer;
     border-radius: 40px;
-}
-.D10
-{
-    
-    position: relative;
-    top: 0px;
-    left:0px; 
-    width: 100%;
-    height: 30vh;
-    flex-direction: column;
-    display: flex;
-    align-content: center;
-    align-items: center;
-}
-.D11
-{
-   
-    width: 100%;
-    top:80px;
-    height: 15px;
-    background-color: rgb(44, 119, 119);
-    position: fixed;
-    top:230px;
-   
-    
+    z-index:10;
 }
 .D12
 {
    
-    width: 80%;
+    width: 100%;
     height: 82px;
     background-color: rgb(44, 119, 119);
     display: flex;
@@ -213,6 +187,9 @@ body
     justify-items: center;
      border-radius: 9px;
      top:0px;
+     
+    
+     
 
    
     
@@ -271,7 +248,8 @@ body
 }
 .logoescrita
 {
-    font-family: 'Pinyon Script', cursive;font-size: 98px;
+    font-family: "Pinyon Script" ;
+    font-size: 98px;
     width:1500px;
     height: 500px;
     top: 100px;
@@ -313,11 +291,14 @@ a
 {
     /*background-color: red;*/
     height: 400px;
-    width:2700px;
+    width:100%;
     display: flex;
     flex-direction:row;
-    margin-left: -300px;
-    margin-top: 160px;
+    top: 140px;
+    position: relative;
+
+
+   
 
 }
 
@@ -328,40 +309,69 @@ a
     margin-left: 0px;
     animation: deslizar 2s;
     width: 400px;
+    
 }
 
 .img_legenda
 {
     position: relative;
    
-    width: 400px;
-    height: 420px;
+    width: 300px;
+    height: 358px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     justify-items: center;
     align-items: center;
     align-content: center;
-    border-radius: 20px;
     margin-left: 50px;
     margin-top: 120px;
+    background-color: rgba(50, 102, 94, 0.589);
 }
 .carrossel
 {
     height: 500px;
-    width: 55%;
+    width: 500%;
     display: flex;
     flex-direction:row;
     /*background-color: yellow;*/
-    margin-left: 10px;
     justify-items: center;
     align-content: center;
     align-items: center; 
-    margin-top:-100px ;
-    margin-left: 300px;
+    margin-top:230px ;
+    margin-left: 15px;
     overflow: hidden;
+   
+    
 
 }
+
+.teste
+{
+     animation: deslizar2 5s forwards;
+
+}
+
+@keyframes deslizar2
+{
+ 0%{margin-left:40px; }
+ 100% {margin-left:-600px;}
+}
+.teste2
+{
+     animation: deslizar3 5s forwards;
+
+}
+
+@keyframes deslizar3
+{
+ 0%{margin-left:-600px; }
+ 100% {margin-left:40px;}
+}
+
+
+
+
 
 .preco
 {
@@ -375,11 +385,29 @@ a
      align-items: center; 
      flex-direction: column;
      color:white;
-    TOP:250PX;
-    
-     
-   position: absolute;
-   bottom: 0px;
+    TOP:270PX;
+    position: absolute;
+     bottom: 0px;
 
 }
+.botaodeslizar
+{
+    position:absolute;
+    width: 60px;
+    height: 60px;
+    right: 30px;
+    top:745px;
+    z-index: 10;
+    
+}
+.botaodeslizar2
+{
+  
+    position:absolute;
+    width: 60px;
+    height: 60px;
+    right: 1480px;
+    top:740px;
+    z-index: 10;
 
+}
