--- a/estilo_doces.css
+++ b/estilo_doces.css
@@ -409,3 +409,58 @@ a
     z-index: 10;
 
 }
+.titulo
+{
+    font-size: 60px;
+    top: 210px;
+    height: 200px;
+    width: 200px;
+    z-index: 10;
+    left:70px;
+    color: rgb(50, 102, 94);
+    position: absolute;
+
+}
+.subtitulo
+{
+    font-family: 'Dancing Script', cursive; 
+    position: absolute;
+    top: 170px;
+    left:470px; 
+    z-index: 10;
+    font-size: 100px;
+
+}
+.personalize
+{
+    background-color: rgba(50, 102, 94, 0.589);
+    width: 350px;
+    height: 100px;
+    z-index: 100;
+    top:180px;
+    left: 1100px;
+    position:absolute;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+   
+    
+
+   
+
+}
+.botaoescolha
+{
+    background-color: rgba(255, 255, 255, 0.613);
+    width: 300px;
+    height: 55px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    color:black;
+    font-family: 'Dancing Script', cursive; 
+    font-size: 30px;
+    
+}
