--- a/estilo_pagamento.css
+++ b/estilo_pagamento.css
@@ -1,6 +1,5 @@
 body
 {
-    
     font-family: "Audiowide", sans-serif;
     background-image: url("fundo4.jpg");
     overflow: hidden;
@@ -8,16 +7,13 @@ body
     padding: 0%;
     width: 100%;
     height: 100vh;
-
-   
-    
-   
-
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    align-content: center;
 }
 .principal
 {
-
-   
     border-color: brown;
     border-width: 5px;
     width: 100%;
@@ -30,11 +26,11 @@ body
 }
 .logo
 {
-    width: 80px;
+    width: 4%;
     z-index: 11;
     position:absolute;
-    top:-5px;
-    left:30px;
+    top:3px;
+    left:20px;
 }
 
 .D2
@@ -45,24 +41,24 @@ body
     left:0px; 
     width: 100%;
     height: 30vh;
+    z-index:10;
 }
 .D3
 {
-    /*background-color: brown;*/
+   
     position: absolute;
     width: 60px;
     height: 60px;
     left: 190px;
     top:10px;
     display: flex;
-    flex-direction: row;
     justify-content: center;
     justify-items: center;
     align-items: center;
     align-content: center;
     cursor: pointer;
     border-radius: 40px;
-    z-index:10;
+    z-index:11;
 
 }
 .D4
@@ -185,13 +181,7 @@ body
     align-items: center;
     align-content: center;
     justify-items: center;
-     
-     top:0px;
-     
-    
-     
-
-   
+    top:0px;
     
 }
 
@@ -199,34 +189,37 @@ body
 
 .D3:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
+    background-color: black;
+
 }
 .D4:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
+    background-color: black;
 
 }
 .D5:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
+    background-color: black;
+
 }
 .D6:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
+    background-color: black;
 
 }
 .D8:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
+    background-color: black; 
+
 }
 .D9:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
+    background-color: black;
 
 }
 .D2:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
+    border-color: black;
 
 }
 .D13
@@ -253,30 +246,7 @@ body
     margin-left: 650px;
     z-index: 13px;
     margin-top:-130px ;
-    
-    
-
 }
-/* {
-    position: absolute;
-    top: 300px;
-    left:80px; 
-    background-color: black;
-    width: 500px;
-    height: 500px;
-}
-/*.imagemcoxinha
-{
-    position: absolute;
-    top: 300px;
-    left:80px;
-    width: 1000px;
-    height: 500px;
-
-}*/
-
-
-
 
 a
 {
@@ -293,11 +263,6 @@ a
     flex-direction:row;
     top: 140px;
     position: relative;
-   
-
-
-   
-
 }
 
 .todas
@@ -307,7 +272,6 @@ a
     margin-left: 0px;
     animation: deslizar 2s;
     width: 400px;
-    
 }
 
 .img_legenda
@@ -339,9 +303,6 @@ a
     margin-top:230px ;
     margin-left: 15px;
     overflow: hidden;
-   
-    
-
 }
 
 .teste
@@ -367,10 +328,6 @@ a
  100% {margin-left:40px;}
 }
 
-
-
-
-
 .preco
 {
     width: 250px;
@@ -386,7 +343,6 @@ a
     TOP:270PX;
     position: absolute;
      bottom: 0px;
-
 }
 .botaodeslizar
 {
@@ -396,7 +352,6 @@ a
     right: 30px;
     top:745px;
     z-index: 10;
-    
 }
 .botaodeslizar2
 {
@@ -409,61 +364,94 @@ a
     z-index: 10;
 
 }
-.titulo
+/*FIM MENU NOVO*/
+.paggeral
 {
-    font-size: 60px;
-    top: 210px;
-    height: 200px;
-    width: 200px;
-    z-index: 10;
-    left:70px;
-    color: rgb(50, 102, 94);
-    position: absolute;
-
+    width: 100%;
+    height: 85%;
+    margin-top: 30px;
 }
-.subtitulo
+.pagtitulo
 {
-    font-family: 'Dancing Script', cursive; 
-    position: absolute;
-    top: 170px;
-    left:470px; 
-    z-index: 10;
-    font-size: 100px;
-
-}
-.personalize
-{
-    background-color: rgba(255, 255, 255, 0.613);
-    width: 350px;
-    height: 100px;
-    z-index: 100;
-    top:180px;
-    left: 1100px;
-    position:absolute;
+    margin-left: 50px;
+    background-color: rgba(57, 143, 140, 0.813);
+    border-radius: 15px;
+    width: 30%;
+    height: 10vh;
     display: flex;
-    justify-content: center;
     align-content: center;
     align-items: center;
-   
-    
-
-   
-
+    justify-content: space-around;
+    justify-items: center;
+    font-size: 20px;
+    animation: backInLeft 1s;
 }
-.botaoescolha
+.pagamento2
 {
-    background-color:rgba(50, 102, 94, 0.589) ;
-    width: 300px;
-    height: 55px;
+    width: 100%;
+    height: 85vh;
     display: flex;
-    justify-content: center;
+    flex-direction: row;
     align-content: center;
     align-items: center;
-    color:black;
-    font-family: 'Dancing Script', cursive; 
-    font-size: 30px;
+    justify-content: space-around;
+    justify-items: center;
     
 }
+.pagamento3
+{
+    background: rgba(245, 247, 248, 0.793);
+    width: 30%;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    border-radius: 10px;
+    animation: fadeInLeft 2s;
+}
+.pagamento4
+{
+    background: rgba(245, 247, 248, 0.793);
+    width: 30%;
+    height: 110vh;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    animation: fadeInLeft 2s;
+}
+.pagamento5
+{
+    background: rgba(32, 126, 133, 0.709);
+    width: 20%;
+    height: 30vh;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+}
+.certo
+    {
+        background-color: rgb(189, 238, 189);
+        color: rgb(22, 107, 36);
+    }
 
-
-   
+    .errado
+    {
+        background-color: rgba(124, 9, 9, 0.856);
+        color: white;
+    }
+.fild
+{
+    border-radius: 10px;
+    border-style: solid;
+    border-color: rgb(29, 114, 103);
+    width: 30%;
+}
