--- a/estilo_carrinho.css
+++ b/estilo_carrinho.css
@@ -199,37 +199,33 @@ body
 
 .D3:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
-
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617))
 }
 .D4:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
-
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617))
 }
 .D5:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617))
 
 }
 .D6:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
-
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617))
 }
 .D8:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
-
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617))
 }
 .D9:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617))
 
 }
 .D2:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617))
 
 }
 .botaopagamento
@@ -258,5 +254,5 @@ body
 }
 .botaopagamento:hover
 {
-    background-color:radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) ) ;
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617))
 }
