--- a/estilo_index.css
+++ b/estilo_index.css
@@ -5,14 +5,12 @@ body
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(to bottom,rgb(34, 95, 93), rgb(42, 121, 118),silver);
+    overflow: hidden;
 
 }
 
 .principal
 {
-    border-style: solid;
-   /* border-color: brown;*/
-    border-width: 5px;
     width: 99%;
     height: 99vh;
 }
