--- a/estilo_pagamento.css
+++ b/estilo_pagamento.css
@@ -189,37 +189,36 @@ body
 
 .D3:hover
 {
-    background-color: black;
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 
 }
 .D4:hover
 {
-    background-color: black;
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 
 }
 .D5:hover
-{
-    background-color: black;
+{background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
+
 
 }
 .D6:hover
 {
-    background-color: black;
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 
 }
 .D8:hover
 {
-    background-color: black; 
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 
 }
 .D9:hover
 {
-    background-color: black;
-
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 }
 .D2:hover
 {
-    border-color: black;
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 
 }
 .D13
