--- a/estilo_doces.css
+++ b/estilo_doces.css
@@ -466,5 +466,5 @@ a
 }
 .personalize :hover
 {
-    background-color:rgb(229, 222, 151);
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 }
